# ecu_diagnostics

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  ecu_diagnostics.hpp  macchina_log.txt
.github/: FUNDING.yml
.github/workflows/: rust.yml
examples/: README.md  kwp.rs  kwp_slcan.rs  peak.rs  slcan_can.rs
examples/passthru_isotp/: Cargo.toml  macchina_log.txt
examples/passthru_isotp/src/: main.rs
examples/uds_over_socketcan/: Cargo.toml  crd_read_ident.txt
examples/uds_over_socketcan/src/: main.rs  sim_ecu.rs  socketcan_iface.rs
ffi/: CMakeLists.txt  Cargo.toml  build.rs  ecu_diagnostics_ffi.hpp
ffi/examples/cmake_project/: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake
ffi/examples/cmake_project/src/: ecu_diagnostics_ffi.hpp  main.cpp
ffi/src/: lib.rs
src/: channel.rs  dtc.rs  dynamic_diag.rs  ffi.rs  helpers.rs  lib.rs
src/hardware/: mod.rs  simulation.rs  socketcan.rs  software_isotp.rs  sw_isotp.rs
src/hardware/dpdu/: c_types.rs  lib_funcs.rs  mod.rs  scanner.rs
src/hardware/passthru/: lib_funcs.rs  mod.rs  sw_isotp.rs
src/hardware/pcan_usb/: lib_funcs.rs  mod.rs  pcan_types.rs
src/hardware/slcan/: device.rs  mod.rs
src/kwp2000/: clear_diagnostic_information.rs  ecu_reset.rs  error.rs  ioctl_mgr.rs  message_transmission.rs  mod.rs  read_data_by_identifier.rs  read_data_by_local_id.rs  read_dtc_by_status.rs  read_ecu_identification.rs  read_memory_by_address.rs  read_status_of_dtc.rs  routine.rs  security_access.rs  start_diagnostic_session.rs
src/obd2/: data_pids.rs  enumerations.rs  mod.rs  presentation.rs  service01.rs  service09.rs  units.rs
src/uds/: clear_diagnostic_information.rs  communication_control.rs  diagnostic_session_control.rs  ecu_reset.rs  mock.rs  mod.rs  read_dtc_information.rs  read_write_data.rs  routine_control.rs  scaling_data.rs  security_access.rs  test.rs  upload_download.rs
tests/: software_isotp_sim.rs  uds_sim_ecu.rs
