[package]
name = "ecu_diagnostics"
version = "0.95.6"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2021"
description = "A rust crate for ECU diagnostic servers and communication APIs"
license = "MIT"
repository = "https://github.com/rnd-ash/ecu_diagnostics"
readme = "README.md"
keywords = ["socketcan", "kwp2000", "uds", "j2534", "dpdu"]
exclude = [
    "examples/*",
    "build.rs",
    "ecu_diagnostics.hpp"
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "i686-pc-windows-msvc", "x86_64-apple-darwin"]

[features]
default = ["passthru", "socketcan"]
passthru = ["dep:libloading", "dep:shellexpand", "dep:winreg", "dep:serde_json", "dep:j2534_rust"]
socketcan = ["dep:socketcan-isotp", "dep:socketcan"]

[dependencies]
automotive_diag = "0.1"
j2534_rust = { version = "1.5.0", optional = true }
libloading = { version = "0.7.3", optional = true }
log = "0.4.16"
serde_json = { version = "1.0.79", optional = true }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.44"

[dev-dependencies]
env_logger = "0.10.0"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.10.1", optional = true }

[target.'cfg(unix)'.dependencies]
shellexpand = { version = "2.1.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
socketcan-isotp = { optional = true, version = "1.0.1" }
socketcan = { version = "2.0.0", optional = true }

#[patch.crates-io]
## Enable local automotive_diag crate for development
#automotive_diag = { path = "../automotive_diag" }
