[package]
name = "ecu_diagnostics"
version = "0.97.0"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2021"
description = "A rust crate for ECU diagnostic servers and communication APIs"
license = "MIT"
repository = "https://github.com/rnd-ash/ecu_diagnostics"
readme = "README.md"
keywords = ["socketcan", "kwp2000", "uds", "j2534", "slcan"]
exclude = [
    "examples/*",
    "build.rs",
    "ecu_diagnostics.hpp"
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "i686-pc-windows-msvc", "x86_64-apple-darwin"]

[features]
default = ["passthru", "socketcan", "slcan"]
socketcan = ["dep:socketcan-isotp", "dep:socketcan"]
passthru = ["dep:libloading", "dep:shellexpand", "dep:winreg", "dep:serde_json", "dep:j2534_rust"]
slcan = ["dep:serial-rs"]

[dependencies]
#automotive_diag = { version = "0.1", path = "../automotive_diag" }
automotive_diag = "0.1.11"
j2534_rust = { version = "1.5.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
libloading = { version = "0.8.6", optional = true }
log="0.4.27"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror="2.0.12"
serial-rs = { version = "0.2.1", optional = true }
bitflags = "2.9.0"

[dev-dependencies]
env_logger = "0.11.7"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.10.1", optional = true }

[target.'cfg(unix)'.dependencies]
shellexpand = { version = "3.1.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
socketcan-isotp = { optional = true, version = "1.0.1" }
socketcan = { version = "3.3.0", optional = true }
