[package]
name = "ecu_diagnostics_ffi"
version = "0.0.5"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2018"
description = "A rust crate for ECU diagnostic servers (FFI module)"
license = "MIT"
repository = "https://github.com/rnd-ash/ecu_diagnostics"
readme = "README.md"
keywords = ["ecu", "kwp2000", "uds", "obd2", "cars"]
exclude = [
    "examples/*",
    "build.rs",
    "ecu_diagnostics.hpp"
]

[lib]
name = "ecu_diagnostics_ffi"
crate-type = ["cdylib"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
default-target = "i686-pc-windows-msvc"

[build-dependencies]
cbindgen = "0.19.0"

[dependencies]
ecu_diagnostics = { path = "../" }
